--- a/package.json
+++ b/package.json
@@ -12,21 +12,30 @@
     "@mantine/carousel": "^7.9.2",
     "@mantine/core": "^7.9.2",
     "@mantine/hooks": "^7.9.2",
+    "@react-email/components": "^0.0.19",
+    "@types/nodemailer": "^6.4.15",
+    "aos": "^2.3.4",
     "classnames": "^2.5.1",
+    "emailjs-com": "^3.2.0",
     "embla-carousel-autoplay": "^7.1.0",
     "embla-carousel-react": "^7.1.0",
     "next": "14.2.4",
+    "nodemailer": "^6.9.13",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-material-ui-carousel": "^3.4.2",
+    "react-slick": "^0.30.2",
     "sass": "^1.77.6",
+    "slick-carousel": "^1.8.1",
     "swiper": "^10.3.1"
   },
   "devDependencies": {
+    "@types/aos": "^3.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
